--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: python@82c7e631bb3cdc910f68e0081d67478d79c6982d
       with:
         python-version: "3.10"
 
