--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,28 +1,25 @@
 name: YouTube Shorts Auto Upload
 
 on:
-  workflow_dispatch:   # Manual run
-  schedule:
-    - cron: "0 */5 * * *"   # Har 5 ghante me chalega
+  workflow_dispatch:
 
 jobs:
   upload:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
+      - name: Checkout repository
+        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
 
-    - name: Set up Python
-      uses: python@82c7e631bb3cdc910f68e0081d67478d79c6982d
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run script
-      env:
-        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      run: python main.py
+      - name: Run script
+        run: python main.py
