--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,25 +1,10 @@
-name: YouTube Shorts Auto Upload
-
-on:
-  workflow_dispatch:
-
-jobs:
-  upload:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v3
-
-      - name: Set up Python
-        uses: actions/setup-python@5ccb29d8773c3f3f653e1705f474dfaa8a06a912 # v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install --no-cache-dir -r requirements.txt
-
-      - name: Run script
-        run: python main.py
+moviepy==1.0.3
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
+pillow==9.5.0
+requests==2.31.0
+schedule==1.2.0
+google-api-python-client==2.86.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+pexels-api==1.0.0
