--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,20 +1,21 @@
-name: YouTube Shorts Auto Upload
+name: upload
 
 on:
   workflow_dispatch:
+  push:
 
 jobs:
-  upload:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@82c7e631bb3cdc910f68e0081cb32635878777bc
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
@@ -22,8 +23,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run script
-        env:
-          YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
-          YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
-          YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
         run: python main.py
