--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -2,6 +2,8 @@ name: upload
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 */5 * * *"   # har 5 ghante me run karega
   push:
 
 jobs:
@@ -10,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
       - name: Set up Python
-        uses: actions/setup-python@82c7e631bb3cdc910f68e0081cb32635878777bc
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3
         with:
           python-version: "3.10"
 
