--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,10 +1,9 @@
-name: upload
+name: YouTube Shorts Auto Upload
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # manually run karne ke liye
   schedule:
-    - cron: "0 */5 * * *"   # har 5 ghante me run karega
-  push:
+    - cron: "0 */5 * * *"   # har 5 ghante me ek baar (UTC time)
 
 jobs:
   build:
@@ -12,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+        uses: actions/checkout@f213d3c485d8a3e811a4c21c6d4e8e85c36e86a0
 
       - name: Set up Python
-        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3
+        uses: actions/setup-python@82c76e31bb3dc910f68e0081cb32635878777bc
         with:
           python-version: "3.10"
 
@@ -25,4 +24,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run script
+        env:
+          YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
+          YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
+          YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
         run: python main.py
