--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,9 +1,10 @@
 name: YouTube Shorts Auto Upload
 
 on:
-  workflow_dispatch:   # manually run karne ke liye
+  workflow_dispatch:
   schedule:
-    - cron: "0 */5 * * *"   # har 5 ghante me ek baar (UTC time)
+    - cron: "0 */5 * * *"  # Har 5 ghante me run
+  push:
 
 jobs:
   build:
@@ -11,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@f213d3c485d8a3e811a4c21c6d4e8e85c36e86a0
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
       - name: Set up Python
-        uses: actions/setup-python@82c76e31bb3dc910f68e0081cb32635878777bc
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3
         with:
           python-version: "3.10"
 
