--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-moviepy==1.0.3
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-pillow==9.5.0
-requests==2.31.0
-schedule==1.2.0
-google-api-python-client==2.86.0
-google-auth==2.22.0
-google-auth-oauthlib==1.0.0
-pexels-api==1.0.1
+moviepy
+imageio-ffmpeg
+imageio
+numpy
+Pillow
+requests
+schedule
+google-api-python-client
+google-auth
+google-auth-oauthlib
+pexels
+yt-dlp
+proglog
