--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-moviepy
-imageio-ffmpeg
-imageio
-numpy
-Pillow
-requests
-schedule
-google-api-python-client
-google-auth
-google-auth-oauthlib
-pexels
-yt-dlp
-proglog
+moviepy==1.0.3
+imageio==2.31.1
+imageio-ffmpeg==0.4.9
+numpy==1.23.5
+Pillow==9.5.0
+requests==2.31.0
+schedule==1.2.0
+google-api-python-client==2.96.0
+google-auth==2.23.0
+google-auth-oauthlib==1.1.0
+pexels-api==0.0.4
+yt-dlp==2023.11.16
+proglog==0.1.10
