--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,47 +1,37 @@
-name: build
+name: youtube-shorts-upload
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: "0 */5 * * *" # har 5 ghante run hoga
+    - cron: "0 */5 * * *"   # Har 5 ghante ek video
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Repo download without actions/checkout
-      - name: Download source archive
-        run: |
-          curl -L -o src.tar.gz https://github.com/${{ github.repository }}/archive/${{ github.sha }}.tar.gz
-          tar -xzf src.tar.gz
-          EXTRACTED_DIR=$(find . -maxdepth 1 -type d -name '-' | head -n 1)
-          echo "Extracted folder: $EXTRACTED_DIR"
-          cp -r "$EXTRACTED_DIR"/* .
-          rm -rf "$EXTRACTED_DIR" src.tar.gz
-          ls -la
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # ✅ Python setup with pin
       - name: Set up Python
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 python3-pip
-          python3 -m pip install --upgrade pip
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-      # ✅ Install dependencies (version lock to avoid future mismatch)
       - name: Install dependencies
         run: |
-          pip install moviepy==1.0.3 imageio-ffmpeg==0.4.9 pillow==10.2.0 requests==2.31.0 schedule==1.2.1 google-api-python-client==2.131.0 google-auth==2.29.0 google-auth-oauthlib==1.2.0
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      # ✅ Run script
-      - name: Run one generation + upload
+      - name: Run video generation + upload
         env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
           YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
           YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
           YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
           YT_API_KEY: ${{ secrets.YT_API_KEY }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
-        run: |
-          python3 main.py
+        run: python main.py
