--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 moviepy==1.0.3
-imageio==2.31.1
-imageio-ffmpeg==0.4.9
-numpy==1.23.5
-Pillow==9.5.0
+imageio[ffmpeg]==2.31.1
+pillow==10.0.1
 requests==2.31.0
+schedule==1.2.0
 google-api-python-client==2.108.0
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-schedule==1.2.1
+google-auth==2.23.0
+google-auth-oauthlib==1.1.0
