--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-moviepy==1.0.3
-imageio[ffmpeg]==2.31.1
-pillow==10.0.1
-requests==2.31.0
-schedule==1.2.0
-google-api-python-client==2.108.0
-google-auth==2.23.0
-google-auth-oauthlib==1.1.0
+google-api-python-client==2.146.0
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+schedule==1.2.2
+pillow==10.4.0
+requests==2.32.3
+yt-dlp==2024.10.7
