--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,38 +1,25 @@
-name: youtube-shorts-upload
+name: YouTube Shorts Auto Upload
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # Manual run button
   schedule:
-    - cron: "0 */5 * * *"  # Har 5 ghante me run hoga
+    - cron: "0 */5 * * *"   # Har 5 ghante me chalega
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repo
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      # Step 3: Install dependencies
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
-      # Step 4: Run video generation + upload
-      - name: Run video generation + upload
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          HUGGINGFACE_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
-          PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
-          YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
-        run: |
-          echo "✅ Script started..."
-          python main.py
+      - name: Run script
+        run: python main.py
