--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -1,9 +1,9 @@
-name: build
+name: YouTube Shorts Auto Upload
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:       # manually trigger karne ke liye
   schedule:
-    - cron: "0 */5 * * *"   # har 5 ghante me chalega
+    - cron: "0 */5 * * *"  # har 5 ghante mein chalega
 
 jobs:
   build:
@@ -11,20 +11,21 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@f43a0e5ffb64f73e0e6d2e8c6e2d57d3c5c1e6c0  # SHA for v3.5.3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@8f9a9c0d4c44a9fa2c44f4f1f478e6c0a8a1b9a6 # SHA for v4.7.1
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt --prefer-binary
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
 
       - name: Run video generation + upload
         run: |
-          echo "✅ Script started..."
+          echo "🚀 Script started..."
           python main.py
-          
