--- a/.github/workflows/youtube.yml
+++ b/.github/workflows/youtube.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@f43a0e5ffb64f73e0e6d2e8c6e2d57d3c5c1e6c0  # v3.5.3 SHA
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.2.2
 
       - name: Set up Python
-        uses: actions/setup-python@65d7f2a9b9e0b1a3a79b9d7ab0f6c2f1c2e2f6b2  # v4.7.1 SHA
+        uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.2.0
         with:
           python-version: "3.10"
 
