--- a/.gitHub/Workflows/Youtube.yml
+++ b/.gitHub/Workflows/Youtube.yml
@@ -1,1 +1,44 @@
+name: build
 
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 */5 * * *"
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --prefer-binary -r requirements.txt
+
+      - name: Run script
+        run: python main.py
+"""
+
+# Create directories
+with open(os.path.join(repo_name, "main.py"), "w") as f:
+    f.write(main_py)
+
+with open(os.path.join(repo_name, "requirements.txt"), "w") as f:
+    f.write(requirements_txt)
+
+with open(os.path.join(repo_name, "config.json"), "w") as f:
+    f.write(config_json)
+
+with open(os.path.join(workflow_dir, "main.yml"), "w") as f:
+    f.write(workflow_yml)
+
+os.makedirs(os.path.join(repo_name, "images"), exist_ok=True)
+os.makedirs(os.path.join(repo_name, "music"), exist_ok=True)
