--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
-  "GEMINI_API_KEY": "your-gemini-key",
-  "HUGGINGFACE_API_KEY": "your-huggingface-key",
-  "PEXELS_API_KEY": "your-pexels-key"
+  "GEMINI_API_KEY": "AIzaSyCfSRrZHcSf1_NgrosBfP7hSd1j2c9uTuA",
+
+  "HUGGINGFACE_API_KEY": "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"
+
+  "PEXELS_API_KEY": "JHlpkVafbSlaOzW82Cy5GgGrulKWRRRQQMqakIZzyju0iagWj7ZmWyWL",
+
 }
