--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
 
   "HUGGINGFACE_API_KEY": "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",
 
-  "PEXELS_API_KEY": "JHlpkVafbSlaOzW82Cy5GgGrulKWRRRQQMqakIZzyju0iagWj7ZmWyWL",
+  "PEXELS_API_KEY": "JHlpkVafbSlaOzW82Cy5GgGrulKWRRRQQMqakIZzyju0iagWj7ZmWyWL"
 }
