--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --prefer-binary -r requirements.txt
+          pip install -r requirements.txt
+      working-directory: ./
       - name: Write secrets to files
         env:
           CONFIG_JSON: ${{ secrets.CONFIG_JSON }}
