--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,32 @@
+name: build
 
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
+
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
+
+    - name: List files (debug)
+      run: ls -R
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+      working-directory: ./
+
+    - name: Run main script
+      run: python main.py
