--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@13ae6addf04891f7a5c391fa3efb2f4d5f38e819 # v4
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
 
