--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4 pinned
 
     - name: Set up Python
-      uses: actions/setup-python@13ae6addf04891f7a5c391fa3efb2f4d5f38e819 # v5
+      uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # v5 pinned
       with:
         python-version: "3.10"
 
@@ -27,8 +27,9 @@ jobs:
 
     - name: Install dependencies
       run: pip install -r requirements.txt
-      working-directory: ./
+      working-directory: ${{ github.workspace }}
 
     - name: Run main script
       run: python main.py
+      working-directory: ${{ github.workspace }}
       
