--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "GEMINI_API_KEY": "YOUR_GEMINI_API_KEY",
-  "HF_API_KEY": "YOUR_HF_API_KEY",
+  "GEMINI_API_KEY": "GEMINI_API_KEY",
+  "HF_API_KEY": "HF_TOKEN",
   "youtube": {
     "privacy_status": "public",
     "category_id": "22",
