--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: build
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */5 * * *"
+    - cron: "0 */5 * * *"   # Har 5 ghante me chalega
 
 jobs:
   build:
@@ -11,31 +11,27 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.2.2
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.2.0
         with:
           python-version: "3.10"
 
       - name: Install dependencies
         run: |
-          sudo apt-get update && sudo apt-get install -y ffmpeg
           python -m pip install --upgrade pip
           pip install --prefer-binary -r requirements.txt
-
       - name: Write secrets to files
         env:
           TOKEN_JSON: ${{ secrets.TOKEN_JSON }}
-          CLIENT_SECRET_JSON: ${{ secrets.CLIENT_SECRET_JSON }}
           CONFIG_JSON: ${{ secrets.CONFIG_JSON }}
+          CLIENT_SECRET_JSON: ${{ secrets.CLIENT_SECRET_JSON }}
         run: |
           echo "$TOKEN_JSON" > token.json
-          echo "$CLIENT_SECRET_JSON" > client_secret.json
           echo "$CONFIG_JSON" > config.json
-
-      - name: Run script
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: python main.py
+          echo "$CLIENT_SECRET_JSON" > client_secret.json
+      - name: Run video generation + upload
+        run: |
+          echo "✅ Script started..."
+          python main.py
