--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "GEMINI_API_KEY": "YOUR_GEMINI_API_KEY",
+  "GEMINI_API_KEY": "GEMINI_API_KEY",
   "HF_API_KEY": "YOUR_HUGGINGFACE_API_KEY",
   "video_generation": {
     "duration_seconds": 15
