--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
 {
-  "GEMINI_API_KEY": "GEMINI_API_KEY",
-  "HF_API_KEY": "YOUR_HUGGINGFACE_API_KEY",
-  "video_generation": {
-    "duration_seconds": 15
-  }
+  "topic": "Top AI tools 2025",
+  "video_count": 2,
+  "video_duration": 60,
+  "auto_upload": true
 }
