--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,34 @@
-name: build
+name: Auto YouTube Upload
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 */5 * * *"   # Har 5 ghante me chalega
+    - cron: "0 9 * * *"   # रोज़ सुबह 9 बजे चलेगा (UTC time)
+  workflow_dispatch:       # Manual run option
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.2.2
+      - name: Checkout Repo
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.2.0
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --prefer-binary -r requirements.txt
-      - name: Write secrets to files
-        env:
-          TOKEN_JSON: ${{ secrets.TOKEN_JSON }}
-          CONFIG_JSON: ${{ secrets.CONFIG_JSON }}
-          CLIENT_SECRET_JSON: ${{ secrets.CLIENT_SECRET_JSON }}
+          pip install moviepy diffusers torch torchvision torchaudio yt-dlp google-auth google-auth-oauthlib google-api-python-client pillow
+
+      - name: Create Secrets Files
         run: |
-          echo "$TOKEN_JSON" > token.json
-          echo "$CONFIG_JSON" > config.json
-          echo "$CLIENT_SECRET_JSON" > client_secret.json
-      - name: Run video generation + upload
+          echo '${{ secrets.CLIENT_SECRET_JSON }}' > client_secret.json
+          echo '${{ secrets.TOKEN_JSON }}' > token.json
+
+      - name: Run Automation
         run: |
-          echo "✅ Script started..."
           python main.py
+          
