--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,38 @@
-name: build
+name: AI Shorts Automation
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 */5 * * *"   # Har 5 ghante me chalega
+    - cron: "0 */5 * * *"  # Har 5 ghante chalega
+  workflow_dispatch:       # Manual run option
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.2.2
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.2.0
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --prefer-binary -r requirements.txt
-      - name: Write secrets to files
+          pip install -r requirements.txt
+
+      - name: Setup secrets
+        run: echo "${{ secrets.TOKEN_JSON }}" > token.json
         env:
+          HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+
+      - name: Run pipeline
+        run: python main.py
+        env:
+          HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           TOKEN_JSON: ${{ secrets.TOKEN_JSON }}
-          CONFIG_JSON: ${{ secrets.CONFIG_JSON }}
-          CLIENT_SECRET_JSON: ${{ secrets.CLIENT_SECRET_JSON }}
-        run: |
-          echo "$TOKEN_JSON" > token.json
-          echo "$CONFIG_JSON" > config.json
-          echo "$CLIENT_SECRET_JSON" > client_secret.json
-      - name: Run video generation + upload
-        run: |
-          echo "✅ Script started..."
-          python main.py
+          
