--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
-torchvision
-torchaudio
-accelerate
+imageio>=2.31.1
+imageio-ffmpeg>=0.4.10
+Pillow>=10.0.1
+
+google-auth>=2.23.0
+google-auth-oauthlib>=1.0.0
+
+# Hugging Face API
 google-auth-httplib2
-moviepy==1.0.3
-Pillow>=10.0.0
-google-api-python-client>=2.129.0
-google-auth>=2.35.0
-google-auth-oauthlib>=1.2.1
 requests>=2.32.3
-google-genai>=0.8.0
-schedule>=1.2.1
-gTTS
-diffusers
-torch
-transformers
 yt_dlp
-numpy
+google-generativeai==0.1.0
+moviepy==1.0.3
+google-api-python-client==2.98.0
