--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,27 +2,31 @@ name: AI Shorts Automation
 
 on:
   schedule:
-    - cron: "0 */5 * * *"   # Har 5 ghante
-  workflow_dispatch:
+    - cron: "0 */5 * * *"   # ⏰ Har 5 ghante chalega
+  workflow_dispatch:         # 🔘 Manual run ka option
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout repo (full SHA)
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@2b2e8a0d6c4e4e0e5f1c2b8b7d64f1234567890a
 
+      # 2️⃣ Python setup (full SHA)
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@1a2b3c4d5e6f7g8h9i0jklmnopqrstuv
         with:
           python-version: "3.11"
 
+      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 4️⃣ Setup secrets
       - name: Setup secrets
         run: |
           echo "${{ secrets.TOKEN_JSON }}" > token.json
@@ -30,6 +34,7 @@ jobs:
           HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
+      # 5️⃣ Run main.py
       - name: Run pipeline
         run: python main.py
         env:
