--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,42 +2,37 @@ name: AI Shorts Automation
 
 on:
   schedule:
-    - cron: "0 */5 * * *"   # Runs every 5 hours
-  workflow_dispatch:         # Allows manual trigger
+    - cron: "0 */5 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@2b2e8a0d6c4e4e0e5f1c2b8b7d64f1234567890a
+      - name: Checkout repo
+        uses: actions/checkout@<CHECKOUT_SHA>
 
-      # 2️⃣ Set up Python 3.11
-      - name: Set up Python 3.11
-        uses: actions/setup-python@1a2b3c4d5e6f7g8h9i0jklmnopqrstuv
+      - name: Setup Python 3.11
+        uses: actions/setup-python@<SETUP_PYTHON_SHA>
         with:
           python-version: "3.11"
 
-      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 4️⃣ Set up secrets
-      - name: Set up secrets
-        run: |
-          echo "${{ secrets.TOKEN_JSON }}" > token.json
+      - name: Save token.json
+        run: echo "${{ secrets.TOKEN_JSON }}" > token.json
         env:
           HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
-      # 5️⃣ Run the pipeline
       - name: Run pipeline
         run: python main.py
         env:
           HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          TOKEN_JSON: ${{ secrets.TOKEN_JSON }}
           
