--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@<CHECKOUT_SHA>
+        uses: actions/checkout@<3df4ab11eba7bda6032a0b82a6bb43b11571feac>
 
       - name: Setup Python 3.11
-        uses: actions/setup-python@<SETUP_PYTHON_SHA>
+        uses: actions/setup-python@<82c7e631bb3cdc910f68e0081d67478d79c6982d>
         with:
           python-version: "3.11"
 
