--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ google-auth-oauthlib>=1.0.0
 google-auth-httplib2
 requests>=2.32.3
 yt_dlp
-google-generativeai==0.8.3
+google-generativeai
 google-genai
 moviepy==1.0.3
 google-api-python-client==2.98.0
