--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-imageio>=2.31.1
+Imageio>=2.31.1
 imageio-ffmpeg>=0.4.10
 Pillow>=10.0.1
-
 google-auth>=2.23.0
 google-auth-oauthlib>=1.0.0
-
-# Hugging Face API
 google-auth-httplib2
 requests>=2.32.3
 yt_dlp
 google-generativeai
-google-genai
 moviepy==1.0.3
 google-api-python-client==2.98.0
 schedule
